@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2016 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -95,6 +95,7 @@ public class POP3Store extends Store {
     volatile boolean useFileCache = false;
     volatile File fileCacheDir = null;
     volatile boolean keepMessageContent = false;
+    volatile boolean finalizeCleanClose = false;
 
     public POP3Store(Session session, URLName url) {
 	this(session, url, "pop3", false);
@@ -135,6 +136,9 @@ public class POP3Store extends Store {
 
 	// mail.pop3.starttls.required requires use of STLS command
 	requireStartTLS = getBoolProp("starttls.required");
+
+	// mail.pop3.finalizecleanclose requires clean close when finalizing
+	finalizeCleanClose = getBoolProp("finalizecleanclose");
 
 	String s = session.getProperty("mail." + name + ".message.class");
 	if (s != null) {
@@ -341,9 +345,17 @@ public class POP3Store extends Store {
     }
 
     public synchronized void close() throws MessagingException {
+	close(false);
+    }
+
+    synchronized void close(boolean force) throws MessagingException {
 	try {
-	    if (port != null)
-		port.quit();
+	    if (port != null) {
+		if (force)
+		    port.close();
+		else
+		    port.quit();
+	    }
 	} catch (IOException ioex) {
 	} finally {
 	    port = null;
@@ -410,7 +422,7 @@ public class POP3Store extends Store {
     protected void finalize() throws Throwable {
 	try {
 	    if (port != null)	// don't force a connection attempt
-		close();
+		close(!finalizeCleanClose);
 	} finally {
 	    super.finalize();
 	}
