@@ -31,6 +31,7 @@ K  7356	NPE in Tomcat ClassLoader causes Session.getInstance to fail
 K  7378	Deadlock in IMAPFolder.doProtocolCommand()
 K  7471	InternetAddress.getLocalAddress should use
 	InetAddress.getCanonicalHostName
+K  7472	Store finalizers should not talk to server
 
 
 		  CHANGES IN THE 1.5.5 RELEASE
